--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
+/*
+ * Project: Jacqueline Taylor & Friends
+ *
+ * Created on Tue Jul 27 2021
+ *
+ * Filename: globals.css
+ *
+ * Copyright (c) 2021 Bujisoft
+ */
+
 html,
 body {
   padding: 0;
